@@ -1,4 +1,4 @@
-%\VignetteIndexEntry{xtable List of Tables Gallery}
+%\VignetteIndexEntry{xtable Other Packages Gallery}
 %\VignetteDepends{xtable, spdep, splm, sphet}
 %\VignetteKeywords{LaTeX, HTML, table}
 %\VignettePackage{xtable}
@@ -62,28 +62,34 @@ First load the package and create some objects.
 <<dataspdep>>=
 library(spdep)
 data("oldcol", package = "spdep")
-COL.lag.eig <- lagsarlm(CRIME ~ INC + HOVAL, data = COL.OLD[],
-                        nb2listw(COL.nb))
+
+data.in.sample <- COL.OLD[1:44,]
+data.out.of.sample <- COL.OLD[45:49,]
+
+listw.in.sample <- nb2listw(subset(COL.nb, !(1:49 %in% 45:49)))
+listw.all.sample <- nb2listw(COL.nb)
+
+COL.lag.eig <- lagsarlm(CRIME ~ INC + HOVAL, data = data.in.sample,
+                        listw.in.sample)
 class(COL.lag.eig)
-COL.errW.GM <- GMerrorsar(CRIME ~ INC + HOVAL, data = COL.OLD,
-                          nb2listw(COL.nb, style = "W"),
-                          returnHcov = TRUE)
+COL.errW.GM <- GMerrorsar(CRIME ~ INC + HOVAL, data = data.in.sample,
+                          listw.in.sample, returnHcov = TRUE)
 class(COL.errW.GM)
-COL.lag.stsls <- stsls(CRIME ~ INC + HOVAL, data = COL.OLD,
-                       nb2listw(COL.nb))
+COL.lag.stsls <- stsls(CRIME ~ INC + HOVAL, data = data.in.sample,
+                       listw.in.sample)
 class(COL.lag.stsls)
 
-p1 <- predict(COL.lag.eig, newdata = COL.OLD[45:49,],
-              listw = nb2listw(COL.nb))
+p1 <- predict(COL.lag.eig, newdata = data.out.of.sample,
+              listw = listw.all.sample)
 class(p1)
-p2 <- predict(COL.lag.eig, newdata = COL.OLD[45:49,],
+p2 <- predict(COL.lag.eig, newdata = data.out.of.sample,
               pred.type = "trend", type = "trend")
 #type option for retrocompatibility with spdep 0.5-92
 class(p2)
 
-imp.exact <- impacts(COL.lag.eig, listw = nb2listw(COL.nb))
+imp.exact <- impacts(COL.lag.eig, listw = listw.in.sample)
 class(imp.exact)
-imp.sim <- impacts(COL.lag.eig, listw = nb2listw(COL.nb), R = 200)
+imp.sim <- impacts(COL.lag.eig, listw = listw.in.sample, R = 200)
 class(imp.sim)
 @ %def
 
